Summary: Updated meta tags, added script for real-time encoding and decoding, added styles for webpage, updated package name and description, added new script file.
- The HTML meta tags have been updated for social media sharing. Someone's looking for some extra attention! 😜
- The index.ts file no longer imports from 'bun-template'. Hopefully our developer said goodbye to that bun before it got stale. 🍞
- The package.json now has a new name and description. Who knew compressing HTML could be so exciting? 🤯
- A new script.js has been added for real-time encoding and decoding. We've got a new script on the block! 💻
- A styles.css file has been added for some sweet styling of the webpage. Fashion show, here we come! 💃
- A test case in the index.test.ts file has been updated. Looks like someone’s saying "Hello World" in a whole new way! 👋

And now you know why the developer used to bring a compressor to work every day — for their HTML, of course! 🤣

Files:
M  example/app.icns
M  example/app.ico
M  example/bun.lockb
M  example/dist/index.js
M  example/favicon-120.png
M  example/favicon-128.png
M  example/favicon-144.png
M  example/favicon-152.png
M  example/favicon-195.png
M  example/favicon-228.png
M  example/favicon-32.png
M  example/favicon-57.png
M  example/favicon-72.png
M  example/favicon-96.png
M  example/favicon.ico
A  example/img.png
M  example/index.html
M  example/index.ts
M  example/package.json
A  example/script.js
M  example/src/index.tsx
A  example/styles.css
M  icon.png
M  package.json
M  src/index.test.ts
M  src/index.ts

Committed using auto-commit: Thu Apr 10 2025 20:33:07 GMT-0700 (Pacific Daylight Time)
Autocommit project: https://www.npmjs.com/package/@dobuki/autocommit
All the lame jokes were generated by AI.

--- a/example/index.html
+++ b/example/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bun Template</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>URL to Webpage</title>
+    <meta property="og:title" content="HTML to URL Converter" />
+    <meta property="og:description" content="Compress HTML into shareable URLs instantly!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://web4.dobuki.net" />
+    <meta property="og:image" content="https://jacklehamster.github.io/compress-to-url/example/img.png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="768" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="HTML to URL Converter" />
+    <meta name="twitter:description" content="Compress HTML into shareable URLs instantly!" />
+    <meta name="twitter:image" content="https://jacklehamster.github.io/compress-to-url/example/img.png" />
+    <meta name="description" content="A tool to convert HTML to compressed URLs for easy sharing." />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="root"></div>
+    <script type="module" src="dist/index.js"></script>
   </body>
-  <script type="module">
-    import { Hello } from './dist/index.js';
-
-    const h1 = document.body.appendChild(document.createElement("h1"));
-    h1.textContent = Hello.hello();
-  </script>
 </html>
