--- a/example/index.html
+++ b/example/index.html
@@ -1,22 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>URL to Webpage</title>
     <meta property="og:title" content="HTML to URL Converter" />
-    <meta property="og:description" content="Compress HTML into shareable URLs instantly!" />
+    <meta
+      property="og:description"
+      content="Compress HTML into shareable URLs instantly!"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://web4.dobuki.net" />
-    <meta property="og:image" content="https://jacklehamster.github.io/compress-to-url/example/img.png" />
+    <meta property="og:url" content="https://compress-to-url.dobuki.net" />
+    <meta
+      property="og:image"
+      content="https://compress-to-url.dobuki.net/example/img.png"
+    />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="768" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="HTML to URL Converter" />
-    <meta name="twitter:description" content="Compress HTML into shareable URLs instantly!" />
-    <meta name="twitter:image" content="https://jacklehamster.github.io/compress-to-url/example/img.png" />
-    <meta name="description" content="A tool to convert HTML to compressed URLs for easy sharing." />
+    <meta
+      name="twitter:description"
+      content="Compress HTML into shareable URLs instantly!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://compress-to-url.dobuki.net/example/img.png"
+    />
+    <meta
+      name="description"
+      content="A tool to convert HTML to compressed URLs for easy sharing."
+    />
     <link rel="stylesheet" href="styles.css" />
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebApplication",
+        "name": "HTML to URL Converter",
+        "url": "https://compress-to-url.dobuki.net",
+        "description": "A tool to convert HTML to compressed URLs for easy sharing.",
+        "image": "https://compress-to-url.dobuki.net/example/img.png",
+        "operatingSystem": "Web",
+        "applicationCategory": "Utilities",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "creator": {
+          "@type": "Organization",
+          "name": "Dobuki"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
