--- a/example/index.html
+++ b/example/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HTML to URL Converter</title>
-    <meta property="og:title" content="HTML to URL Converter" />
+    <title>Site on the fly</title>
+    <meta property="og:title" content="Site on the fly" />
     <meta
       property="og:description"
-      content="Compress HTML into shareable URLs instantly!"
+      content="Store a mini website entirely within the URL."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://compress-to-url.dobuki.net" />
@@ -18,10 +18,10 @@
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="768" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="HTML to URL Converter" />
+    <meta name="twitter:title" content="Site on the fly" />
     <meta
       name="twitter:description"
-      content="Compress HTML into shareable URLs instantly!"
+      content="Store a mini website entirely within the URL."
     />
     <meta
       name="twitter:image"
@@ -29,7 +29,7 @@
     />
     <meta
       name="description"
-      content="A tool to convert HTML to compressed URLs for easy sharing."
+      content="Store a mini website entirely within the URL."
     />
     <link rel="stylesheet" href="styles.css" />
     <script type="application/ld+json">
@@ -38,7 +38,7 @@
         "@type": "WebApplication",
         "name": "HTML to URL Converter",
         "url": "https://compress-to-url.dobuki.net",
-        "description": "A tool to convert HTML to compressed URLs for easy sharing.",
+        "description": "Store a mini website entirely within the URL.",
         "image": "https://compress-to-url.dobuki.net/example/img.png",
         "operatingSystem": "Web",
         "applicationCategory": "Utilities",
