--- a/example/index.html
+++ b/example/index.html
@@ -98,5 +98,19 @@
 </body>
 </html>`;
     </script>
+
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-ML968CPVM8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        window.dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-ML968CPVM8");
+    </script>
   </body>
 </html>
